--- a/src/app/review/review.component.scss
+++ b/src/app/review/review.component.scss
@@ -48,6 +48,7 @@
 }
 .product-content {
   margin: 30px 0;
+  word-wrap: break-word;
 }
 .review-rating-input {
   margin-bottom: 15px;
